Psuedocode for feature generation

--- a/other/test_scripts/ranking/Data_Processing.ipynb
+++ b/other/test_scripts/ranking/Data_Processing.ipynb
@@ -1255,29 +1255,45 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 54,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "110.693594162"
+       "15.275715994356"
       ]
      },
-     "execution_count": 34,
+     "execution_count": 54,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "# Estimated size of generated features in MB\n",
-    "(((117.6295 ** 2) * 2000) * 4) / (10 ** 6)"
+    "# Estimated size of generated features in GB\n",
+    "# (with two_sided=False, repear_pairs=False)\n",
+    "((((117.6295 ** 2) / 2) * 2000) * (138 * 2)* 4) / (10 ** 9)"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "The generated features will be much too large to fit in memory.\n",
+    "\n",
+    "Possible solutions:\n",
+    "- Choose some queries (by query id) and run the experiment\n",
+    "    - Choose ~30 (?), will be 0.7 GB\n",
+    "- Do something completely different (?)\n",
+    "    - Run on PSU cluster (?)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Algorithm for generating features from data:\n",
+    "\n",
     "    for all unique query ids:\n",
     "\n",
     "        save temp dataframe w/ only give query id\n",
